@@ -1,3 +1,8 @@
+
+2008-08-29  Martin Kutschker  <masi@typo3.org>
+
+	* Fixed bug #6601: fixed mount point issues with the local page tree cache
+
 2008-08-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9041: Uninitialized array in class.browse_links.php
